--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
     "start": "node index.js"
   },
   "author": "Adil Ahamad",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "async": "^3.2.4"
+  }
 }
